# ytb2bili

./: .gitignore  README.md  pyproject.toml  run.py
config/: default.yaml
doc/: README_zh.md
src/yt2bili/: __init__.py  __main__.py
src/yt2bili/adapters/: bilibili_uploader.py  cloud_subtitle.py  webhook_notifier.py  whisper_subtitle.py
src/yt2bili/cli/: main.py
src/yt2bili/core/: config.py  enums.py  exceptions.py  i18n.py  models.py  paths.py  schemas.py
src/yt2bili/db/: engine.py  repository.py
src/yt2bili/interfaces/: notifier.py  subtitle_gen.py  uploader.py
src/yt2bili/services/: avatar.py  channel_resolver.py  downloader.py  monitor.py  pipeline.py  scheduler.py  subtitle.py  task_queue.py  trigger.py  uploader.py
src/yt2bili/web/: app.py  state.py
src/yt2bili/web/components/: channel_card.py  progress_bar.py  task_row.py
src/yt2bili/web/pages/: auth.py  channels.py  dashboard.py  settings.py  tasks.py  videos.py
tests/: conftest.py
tests/adapters/: test_bilibili_uploader.py
tests/cli/: test_cli.py
tests/core/: test_config.py  test_models.py  test_schemas.py
tests/db/: test_repository.py
tests/services/: test_avatar.py  test_channel_resolver.py  test_downloader.py  test_monitor.py  test_pipeline.py  test_scheduler.py  test_subtitle.py  test_task_queue.py  test_trigger.py  test_uploader.py
